--- a/src/Pages/Landing/styles.css
+++ b/src/Pages/Landing/styles.css
@@ -82,3 +82,48 @@
 .total-connections img {
     margin-left: 0.8rem;
 }
+
+.buttons-container a img {
+    margin-right: 2.4rem;
+}
+
+
+/* Versão Desk */
+
+@media(min-width: 1100px) {
+    #landing-page-content {
+        display: grid;
+        max-width: 1100px;
+        grid-template-rows: 350px 1fr;
+        grid-template-columns: 2fr 1fr 1fr;
+        grid-template-areas: "logo hero hero" "buttons buttons total";
+    }
+    .logo-container {
+        grid-area: logo;
+        align-self: center;
+        margin: 0;
+        text-align: left;
+    }
+    .logo-container h2 {
+        text-align: initial;
+        font-size: 3.6rem;
+    }
+    .logo-container img {
+        height: 100%;
+    }
+    .hero-image {
+        grid-area: hero;
+        justify-self: end;
+    }
+    .buttons-container {
+        grid-area: buttons;
+        justify-content: start;
+    }
+    .buttons-container a {
+        font-size: 2.4rem;
+    }
+    .total-connections {
+        grid-area: total;
+        justify-content: flex-end;
+    }
+}
